--- a/whatsapp/src/app/components/side/chat-list-side/chat-list/chat-list.component.scss
+++ b/whatsapp/src/app/components/side/chat-list-side/chat-list/chat-list.component.scss
@@ -1,4 +1,5 @@
 :host {
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: auto;
     flex-grow: 1;
 }
